tv/prowlarr-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: tv
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    flame.pawelmalak/type: app
    flame.pawelmalak/name: Source
    flame.pawelmalak/url: https://prowlarr.mdapi.ch
    flame.pawelmalak/category: TV
    flame.pawelmalak/icon: rss-box
    flame.pawelmalak/order: '60'
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-signin: https://auth.mdapi.ch/tv/oauth2/start?rd=https://$host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-url: https://auth.mdapi.ch/tv/oauth2/auth
    nginx.ingress.kubernetes.io/proxy-body-size: '8m'
spec:
  ingressClassName: nginx
  rules:
    - host: prowlarr.mdapi.ch
      http:
        paths:
          - backend:
              service:
                name: prowlarr
                port:
                  number: 9696
            path: /
            pathType: Prefix
  tls:
    - hosts:
      - prowlarr.mdapi.ch
      secretName: prowlarr-cert
